[package]
name = "athens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
console = "0.15.7"
indicatif = "0.17.4"
nonempty = "0.8.1"
tempfile = "3.6.0"
clap = { version = "3.2.23", features = ["derive"] }
